version/0.19/_sources/api/solver/_autosummary/settings/discrete_phase_1.rst.txt
:orphan:

.. _discrete_phase_1:

discrete_phase
==============

.. autoclass:: ansys.fluent.core.solver.settings_241.discrete_phase_1.discrete_phase
    :show-inheritance:

.. rubric:: Attributes

============================================================================   =========================================================================================================

Attribute                                                                                                                                                                        Summary

============================================================================   =========================================================================================================
:ref:`histogram <histogram_1>`                                                                                                                                        'histogram' child.

:ref:`sample_trajectories <sample_trajectories>`                                                                                                            'sample_trajectories' child.

:ref:`evap_mass_details_in_dpm_summ_rep <evap_mass_details_in_dpm_summ_rep>`       Choose whether, and for which zone types (Lagr. wall film or cell zones [for free-stream particles]),

============================================================================   =========================================================================================================

.. rubric:: Methods

==================================================================   =================================================================================

Method                                                                                                                                         Summary

==================================================================   =================================================================================
:ref:`summary <summary>`                                                                        Print discrete phase summary report of particle fates.

:ref:`extended_summary <extended_summary>`                               Print extended discrete phase summary report of particle fates, with options.

:ref:`zone_summaries_per_injection <zone_summaries_per_injection>`                                  Enable per-injection per-zone DPM summary reports.

==================================================================   =================================================================================

.. rubric:: Included in:

========================   ===================

Parent                                 Summary

========================   ===================
:ref:`report <report_1>`       'report' child.

========================   ===================

