version/0.21/_sources/api/solver/_autosummary/settings/discrete_phase_1.rst.txt
:orphan:

.. _discrete_phase_1:

discrete_phase
==============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.discrete_phase_1.discrete_phase
    :show-inheritance:

.. rubric:: Attributes

==================================================================================   ========================================================================================================

Attribute                                                                                                                                                                             Summary

==================================================================================   ========================================================================================================
:ref:`histogram <histogram_1>`                                                                                                                                             'histogram' child.

:ref:`sample_trajectories <sample_trajectories>`                                                                                                                 'sample_trajectories' child.

:ref:`zone_types_to_calc_exchange_data_on <zone_types_to_calc_exchange_data_on>`         Choose whether, and for which zone types (Lagr. wall film or cell zones [for free-stream particles])

:ref:`exch_details_in_dpm_summ_rep_enabled <exch_details_in_dpm_summ_rep_enabled>`                         Choose whether to print per-zone exchange details in DPM extended summary reports.

==================================================================================   ========================================================================================================

.. rubric:: Methods

==================================================================   =================================================================================

Method                                                                                                                                         Summary

==================================================================   =================================================================================
:ref:`summary <summary>`                                                                        Print discrete phase summary report of particle fates.

:ref:`extended_summary <extended_summary>`                               Print extended discrete phase summary report of particle fates, with options.

:ref:`zone_summaries_per_injection <zone_summaries_per_injection>`                                  Enable per-injection per-zone DPM summary reports.

==================================================================   =================================================================================

.. rubric:: Included in:

========================   ======================================================================================================================================================================================

Parent                                                                                                                                                                                                    Summary

========================   ======================================================================================================================================================================================
:ref:`report <report_2>`       Provides access to common settings to set up reports for your CFD simulation. Reports can be compiled for fluxes forces projected areas surface and volume integrals among others.

========================   ======================================================================================================================================================================================

